force-app/main/default/objects/NEILON__Salesforce_Report_Export_Information__mdt/NEILON__Salesforce_Report_Export_Information__mdt.object-meta.xml
<CustomObject>
    <description>Detail about Salesforce reports which needs to be exported.</description>
    <label>Salesforce Report Export Information</label>
    <pluralLabel>Salesforce Report Export Informations</pluralLabel>
</CustomObject>