force-app/main/default/objects/NEILON__Salesforce_Report_Export_Information__mdt/fields/NEILON__Encoding__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Encoding__c</fullName>
    <label>Encoding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISO-8859-1</fullName>
                <label>ISO-8859-1 (General US &amp; Western European, ISO-LATIN-1)</label>
            </value>
            <value>
                <fullName>UTF-8</fullName>
                <default>true</default>
                <label>Unicode (UTF-8)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>