force-app/main/default/objects/NEILON__Salesforce_Report_Export_Information__mdt/fields/NEILON__Export_File_Format__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Export_File_Format__c</fullName>
    <label>Export File Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
                <default>true</default>
                <label>Comma Delimited .csv</label>
            </value>
            <value>
                <fullName>Excel</fullName>
                <label>Excel Format .xls</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>