force-app/main/default/objects/NEILON__Salesforce_Report_Export_Information__mdt/fields/NEILON__Export_View__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Export_View__c</fullName>
    <description>1. Formatted Report: Export the report as it appears in Salesforce, including the report header, groupings, and filter details.
2. Details Only: Export only the detail rows. Use this to do further calculations or for uploading to other systems.</description>
    <inlineHelpText>1. Formatted Report: Export the report as it appears in Salesforce, including the report header, groupings, and filter details.
2. Details Only: Export only the detail rows. Use this to do further calculations or for uploading to other systems.</inlineHelpText>
    <label>Export View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formatted Report</fullName>
                <default>true</default>
                <label>Formatted Report</label>
            </value>
            <value>
                <fullName>Details Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>