force-app/main/default/objects/NEILON__Salesforce_Report_Export_Information__mdt/fields/NEILON__Salesforce_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Salesforce_Report_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>URL to export report.</description>
    <inlineHelpText>URL to export report. To get it, open your report. From URL https://ap1.salesforce.com/00O900000093p7s, &quot;/00O900000093p7s&quot; will be your URL.  If it&apos;s standard report, from URL https://ap1.salesforce.com/00O?rt=21, &quot;/00O?rt=21&quot; will be your URL.</inlineHelpText>
    <label>Salesforce Report URL</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>