force-app/main/default/objects/NEILON__Salesforce_Report_Export_Information__mdt/fields/NEILON__Salesforce_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Salesforce_Report_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Salesforce Report Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>