force-app/main/default/objects/NEILON__Salesforce_Report_Export_Information__mdt/listViews/NEILON__All.listView-meta.xml
<ListView>
    <fullName>NEILON__All</fullName>
    <columns>MasterLabel</columns>
    <columns>NEILON__Salesforce_Report_Name__c</columns>
    <columns>NEILON__Salesforce_Report_Id__c</columns>
    <columns>NEILON__Custom__c</columns>
    <columns>NEILON__Encoding__c</columns>
    <columns>NEILON__Export_File_Format__c</columns>
    <columns>NEILON__Export_View__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>